<resources>
    <string name="app_name">ProjectX</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="getstart">GET STARTED</string>
    <string name="title_activity_signup">Create Account</string>
    <string name="cancel">CANCEL</string>
    <string name="sex_interested"><b>interested in meeting</b></string>
    <string name="user_mobile_num"><b>confirm mobile number</b></string>
    <string name="otp_verify"><b>confirm otp</b></string>
    <string name="user_info_title"><b>Hi, im</b></string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="title_activity_login_otp">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_logout">Logout</string>
    <string name="Logout">Logout</string>
    <string name="LogoutInfo">Do you really want to logout?</string>
    <string name="DeleteAccountText">Delete my account completely</string>
    <string name="LoginSuccess">Congratulations!!</string>
    <string name="LoginSuccessDetail">You are registered. Now tell us more about your likes and dislikes so that we can find the people around you with same interest.</string>
    <string name="SetLikeDislike">set likes / dislikes</string>
    <string name="GoHome">go to home</string>
    <string name="DeleteAccount">delete my account</string>
    <string name="DeleteAccountInfo">This wil delete your account and related data. Do you want to proceed?</string>
    <string name="Delete">delete</string>
    <string name="Ready">Ready</string>
    <string name="homeScreenNoCommunication">You don\'t have any active communications. Start one by announcing you are ready to meet.</string>
    <string name="title_activity_app_home">AppHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_me_visible">Visible</string>
</resources>
