<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectx.projectx.Fragment.ActionLikeDislike">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/pxlLikeDislikeScreen"/>
        <TextView
            android:id="@+id/pxlLoginSuccessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/pxlLikeDislikeScreen"
            android:text="@string/LoginSuccess"/>
        <TextView
            android:id="@+id/pxlLoginSuccessDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_below="@+id/pxlLoginSuccessText"
            android:text="@string/LoginSuccessDetail"/>

        <Button
            android:id="@+id/btn_action_like_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pxlLoginSuccessDetailText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_bg_transparent"
            android:text="@string/SetLikeDislike"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btn_action_gohome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_action_like_dislike"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_bg_transparent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/GoHome"
            android:textColor="@android:color/black"/>
    </RelativeLayout>

</FrameLayout>
