<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectx.projectx.Login.Logout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <TextView
            android:id="@+id/pxlLogoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/Logout"/>

        <TextView
            android:id="@+id/pxlLogoutInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pxlLogoutText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/LogoutInfo"/>

        <Button
            android:id="@+id/btn_user_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pxlLogoutInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_bg_transparent"
            android:text="@string/Logout"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/pxlDeleteAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/DeleteAccountText"/>

    </RelativeLayout>


</FrameLayout>
