<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/textViewUserMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/user_mobile_num" />

    <EditText
        android:id="@+id/editTextUserMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewUserMobileNumber"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="42dp"
        android:backgroundTint="#00897B"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="Mobile Number"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="#00897B"
        android:textColorHint="#00897B"
        android:typeface="sans" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/next"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/back"
        android:textColor="@android:color/black" />

</RelativeLayout>