<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/pxlOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/user_info_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp">

        <EditText
            android:id="@+id/editTextUserSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#00897B"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Sex"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#00897B"
            android:textColorHint="#00897B"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#00897B"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Name"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#00897B"
            android:textColorHint="#00897B"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editTextUserDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#00897B"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Date of Birth"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#00897B"
            android:textColorHint="#00897B"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editTextUserLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#00897B"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Location"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#00897B"
            android:textColorHint="#00897B"
            android:typeface="sans" />

        <EditText
            android:id="@+id/editTextUserAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#00897B"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Address"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="#00897B"
            android:textColorHint="#00897B"
            android:typeface="sans" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:text="@string/next"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:text="@string/cancel"
        android:textColor="@android:color/black" />
</RelativeLayout>